--- a/index.html
+++ b/index.html
@@ -194,31 +194,41 @@
     <div id="辛蔬" class="set" style="width:100%;">
         <div class="border" style="width: 70%;height: 100px;">
             <div class="text" style=" width: 80px;;height: 80px;">辛蔬</div>
+		<p style=font-size:smaller:>作為校內唯一餐點全是素食類的店，推薦素食者前往，對於食量較小的人可以選擇店內販售的若燥飯，<br>
+			一份38元不會出現吃不完的狀況發生
+		</p>
         </div>
     </div>
     <div id="饗敘" class="set" style="width:100%;">
         <div class="border" style="width: 70%;height: 100px;">
             <div class="text" style=" width: 80px;;height: 80px;">饗敘</div>
+		<p style=font-size:smaller:>午餐時間都是大排長龍，輔大附近唯一一家有賣鍋燒意麵與炒泡麵的店家</p>
         </div>
     </div>
     <div id="阿珠媽" class="set" style="width:100%;">
         <div class="border" style="width: 70%;height: 100px;">
             <div class="text" style=" width: 80px;;height: 80px;">阿珠媽</div>
+		<p style=font-size:smaller:>賣有各式韓式料理</p>
         </div>
     </div>
     <div id="楓炊炒丼" class="set" style="width:100%;">
         <div class="border" style="width: 70%;height: 100px;">
             <div class="text" style=" width: 80px;;height: 80px;">楓炊炒丼</div>
+		<p style=font-size:smaller:>豬丼價格親民，如果剩餘時間較長可以考慮排隊吃看看</p>
         </div>
     </div>
     <div id="三顧茅廬" class="set" style="width:100%;">
         <div class="border" style="width: 70%;height: 100px;">
             <div class="text" style=" width: 80px;;height: 80px;">三顧茅廬</div>
+		<p style=font-size:smaller:>111學年度加入加入理園餐廳行列，除一般滷味以外提供更多不同的湯底，<br>
+			偶爾想換吃點不一樣的食物可以考慮看看
+		</p>
         </div>
     </div>
     <div id="熊賀炒飯" class="set" style="width:100%;">
         <div class="border" style="width: 70%;height: 100px;">
             <div class="text" style=" width: 80px;;height: 80px;">熊賀炒飯</div>
+		<p style=font-size:smaller:>原本位於514巷明日之星的美食街內，本學期(111年學年度)加入學餐的行列，店內有各式各樣的炒飯炒麵。</p>
         </div>
     </div>
     
