--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         margin: 0;
         padding: 0;
         background-color: rgb(240, 186, 105);
+	font-family: setofont;
     }
     
     @import url('http://nonty.net/font/setofont/​');
