--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
         </div>
     </div>
     <div id="辛蔬" class="set" style="width:100%;">
-        <div class="border" style="width: 70%;height: 100px;">
-            <div class="text" style=" width: 80px;;height: 80px;">辛蔬</div>
+        <div class="border" style="width: 70%;height: auto;">
+            <div class="text" style=" width: 10%;;height: auto;">辛蔬</div>
             <div class="mo" >
                 <a style="color:white;">菜單</a>
             </div>
@@ -290,7 +290,7 @@
                     <li>乾拌麵B套餐(三種乾拌麵(小)選一+鮮蔬菇菇湯)  95元</li>
                 </ul>  
             </div>
-		    <p style=font-size:smaller:>作為校內唯一餐點全是素食類的店，推薦素食者前往，對於食量較小的人可以選擇店內販售的若燥飯，<br>
+		    <p style="font-size: 20px;height:auto ;width: 100%;">作為校內唯一餐點全是素食類的店，推薦素食者前往，對於食量較小的人可以選擇店內販售的若燥飯，<br>
 			    一份38元不會出現吃不完的狀況發生
 		    </p>
         </div>
@@ -299,8 +299,8 @@
         <img class="img" src="picture/57.jpg" style="height:30% ;width: 30%;">
     </div>
     <div id="饗敘" class="set" style="width:100%;">
-        <div class="border" style="width: 70%;height: 100px;">
-            <div class="text" style=" width: 80px;;height: 80px;">饗敘</div>
+        <div class="border" style="width: 70%;height: auto;">
+            <div class="text" style=" width: 10%;;height: auto;">饗敘</div>
             <div class="mo" >
                 <a style="color:white;">菜單</a>
             </div>
@@ -330,15 +330,15 @@
                     <li>百頁豆腐  50元</li>
                 </ul>  
             </div>
-		    <p style=font-size:smaller:>午餐時間都是大排長龍，輔大附近唯一一家有賣鍋燒意麵與炒泡麵的店家</p>
+		    <p style="font-size: 20px;height:auto ;width: 100%;">午餐時間都是大排長龍，輔大附近唯一一家有賣鍋燒意麵與炒泡麵的店家</p>
         </div>
     </div>
     <div style="width:100%;" class="imgb" style="height:0% ;width: 0%;">
         <img class="img" src="picture/501.jpg" style="height:30% ;width: 30%;">
     </div>
     <div id="阿珠媽" class="set" style="width:100%;">
-        <div class="border" style="width: 70%;height: 100px;">
-            <div class="text" style=" width: 80px;;height: 80px;">阿珠媽</div>
+        <div class="border" style="width: 70%;height: auto;">
+            <div class="text" style=" width: 10%;;height: auto;">阿珠媽</div>
             <div class="mo" >
                 <a style="color:white;">菜單</a>
             </div>
@@ -358,7 +358,7 @@
                     <li>韓式泡菜炒泡麵  90元</li>
                 </ul>  
             </div>
-		    <p style=font-size:smaller:>賣有各式韓式料理</p>
+		    <p style="font-size: 20px;height:auto ;width: 100%;">賣有各式韓式料理</p>
         </div>
     </div>
     <div style="width:100%;" class="imgb" style="height:0% ;width: 0%;">
@@ -368,8 +368,8 @@
         <img class="img" src="picture/503.jpg" style="height:20% ;width: 20%;">
     </div>
     <div id="楓炊炒丼" class="set" style="width:100%;">
-        <div class="border" style="width: 70%;height: 100px;">
-            <div class="text" style=" width: 80px;;height: 80px;">楓炊炒丼</div>
+        <div class="border" style="width: 70%;height: auto;">
+            <div class="text" style=" width: 10%;;height: auto;">楓炊炒丼</div>
             <div class="mo" >
                 <a style="color:white;">菜單</a>
             </div>
@@ -387,15 +387,15 @@
                     <li>月見蛋豬丼  90元</li>
                 </ul>  
             </div>
-		<p style=font-size:smaller:>豬丼價格親民，如果剩餘時間較長可以考慮排隊吃看看</p>
+		<p style="font-size: 20px;height:auto ;width: 100%;">豬丼價格親民，如果剩餘時間較長可以考慮排隊吃看看</p>
         </div>
     </div>
     <div style="width:100%;" class="imgb" style="height:0% ;width: 0%;">
         <img class="img" src="picture/58.jpg" style="height:20% ;width: 20%;">
     </div>
     <div id="三顧茅廬" class="set" style="width:100%;">
-        <div class="border" style="width: 70%;height: 100px;">
-            <div class="text" style=" width: 80px;;height: 80px;">三顧茅廬</div>
+        <div class="border" style="width: 70%;height: auto;">
+            <div class="text" style=" width: 10%;;height: auto;">三顧茅廬</div>
             <div class="mo" >
                 <a style="color:white;">菜單(套餐)</a>
             </div>
@@ -410,7 +410,7 @@
                     <li>雞肉餐  140元</li>
                 </ul>  
             </div>
-		    <p style=font-size:smaller:>111學年度加入加入理園餐廳行列，除一般滷味以外提供更多不同的湯底，<br>
+		    <p style="font-size: 20px;height:auto ;width: 100%;">111學年度加入加入理園餐廳行列，除一般滷味以外提供更多不同的湯底，<br>
 			    偶爾想換吃點不一樣的食物可以考慮看看
 		    </p>
         </div>
@@ -419,8 +419,8 @@
         <img class="img" src="picture/55.jpg" style="height:20% ;width: 20%;">
     </div>
     <div id="熊賀炒飯" class="set" style="width:100%;">
-        <div class="border" style="width: 70%;height: 100px;">
-            <div class="text" style=" width: 80px;;height: 80px;">熊賀炒飯</div>
+        <div class="border" style="width: 70%;height: auto;">
+            <div class="text" style=" width: 10%;;height: auto;">熊賀炒飯</div>
             <div class="mo" >
                 <a style="color:white;">菜單</a>
             </div>
@@ -460,7 +460,7 @@
                     <li>豬肉沙克飯 85元</li>
                 </ul>  
             </div>
-		    <p style=font-size:smaller:>原本位於514巷明日之星的美食街內，本學期(111年學年度)加入學餐的行列，店內有各式各樣的炒飯炒麵。</p>
+		    <p style="font-size: 20px;height:auto ;width: 100%;">原本位於514巷明日之星的美食街內，本學期(111年學年度)加入學餐的行列，店內有各式各樣的炒飯炒麵。</p>
         </div>
     </div>
     <div style="width:100%;" class="imgb" style="height:0% ;width: 0%;">
