--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     </div>
     <div id="饗敘" class="set" style="width:100%;">
         <div class="border" style="width: 70%;height: auto;">
-            <div class="text" style=" width: 10%;;height: auto;">饗敘</div>
+            <div class="text" style=" width: 10%;height: auto;">饗敘</div>
             <div class="mo" >
                 <a style="color:white;">菜單</a>
             </div>
