--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         font-size: 20px;
         cursor: pointer;
         text-align: center;
-        height: 35px;
+        height: auto;
         margin-top: 40px;
         margin-right:3px;
         margin: 1%;
@@ -102,7 +102,7 @@
         font-size: 20px;
         cursor: pointer;
         text-align: center;
-        height: 35px;
+        height: auto;
         margin-top: 40px;
         margin-right:3px;
         margin: 1%;
@@ -300,7 +300,7 @@
     </div>
     <div id="饗敘" class="set" style="width:100%;">
         <div class="border" style="width: 70%;height: auto;">
-            <div class="text" style=" width: 10%;height: auto;">饗敘</div>
+            <div class="text" style=" width: 10%;;height: auto;">饗敘</div>
             <div class="mo" >
                 <a style="color:white;">菜單</a>
             </div>
